--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "6.17.0",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
