--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
